--- a/package.json
+++ b/package.json
@@ -14,18 +14,33 @@
       "require": "./dist/index.cjs"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "prepublishOnly": "npm run build && npm pack --dry-run",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch"
   },
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": ">=18"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fotros-dev/logloom-js.git"
   },
   "homepage": "https://github.com/fotros-dev/logloom-js#readme",
-  "bugs": { "url": "https://github.com/fotros-dev/logloom-js/issues" },
-  "keywords": ["logger","logging","file","json","node"]
+  "bugs": {
+    "url": "https://github.com/fotros-dev/logloom-js/issues"
+  },
+  "keywords": [
+    "logger",
+    "logging",
+    "file",
+    "json",
+    "node"
+  ],
+  "devDependencies": {
+    "@types/node": "^24.3.1"
+  }
 }
