--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "node"
   ],
   "devDependencies": {
-    "@types/node": "^24.3.1"
+    "@types/node": "^24.3.1",
+    "tsup": "^8.5.0",
+    "typescript": "^5.9.2"
   }
 }
