--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
             "types": "./dist/index.d.ts",
             "import": "./dist/index.mjs",
             "require": "./dist/index.cjs"
+        },
+        "./types": {
+            "types": "./dist/types/index.d.ts",
+            "default": "./dist/types/index.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "types": ["dist/types/index.d.ts"]
         }
     },
     "files": [
         "dist"
     ],
     "scripts": {
-        "build": "tsup src/index.ts --format cjs,esm --dts",
+        "build": "tsup src/index.ts src/types/index.ts --format esm,cjs --dts",
+        "dev": "tsup src/index.ts src/types/index.ts --format esm,cjs --dts --watch",
         "prepublishOnly": "npm run build && npm pack --dry-run",
-        "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:ci": "jest --runInBand"
